# Batch02-Day9_Multi-Agent_MCP-A2A

./: .gitignore  CODELAB.md  STAGE5_OPTIMIZATION.md  agent_interaction_demo.html  pyproject.toml  start_all.sh  test_client.py
Day08_RAG_pipeline_HoTatBaoHoang_2A202600699/: .gitignore  pyproject.toml  requirements.txt
Day08_RAG_pipeline_HoTatBaoHoang_2A202600699/data/landing/news/: article_01.json  article_02.json  article_03.json  article_04.json  article_05.json
Day08_RAG_pipeline_HoTatBaoHoang_2A202600699/data/standardized/legal/: Luat-Phong-chong-ma-tuy-2021-445185.md  Luat-Phong-chong-ma-tuy-2025-so-120-2025-QH15-666019.md  Nghi-dinh-105-2021-ND-CP-huong-dan-Luat-Phong-chong-ma-tuy-496664.md  Nghi-dinh-163-2026-ND-CP-huong-dan-Luat-Phong-chong-ma-tuy-2025-707075.md  Nghi-dinh-57-2022-ND-CP-danh-muc-chat-ma-tuy-va-tien-chat-527507.md  (+1 more)
Day08_RAG_pipeline_HoTatBaoHoang_2A202600699/data/standardized/news/: article_01.md  (+4 more)
Day08_RAG_pipeline_HoTatBaoHoang_2A202600699/group_project/: app.py
Day08_RAG_pipeline_HoTatBaoHoang_2A202600699/group_project/evaluation/: eval_pipeline.py  eval_results.json  golden_dataset.json  results.md
Day08_RAG_pipeline_HoTatBaoHoang_2A202600699/src/: rag_agents.py  rag_graph.py  rag_graph_state.py  task10_generation.py  task1_collect_legal_docs.py  task2_crawl_news.py  task3_convert_markdown.py  task4_chunking_indexing.py  task5_semantic_search.py  task6_lexical_search.py  task7_reranking.py  task8_pageindex_vectorless.py  task9_retrieval_pipeline.py
Day08_RAG_pipeline_HoTatBaoHoang_2A202600699/tests/: test_individual.py
(+18 files in other folders)
